--- a/app/src/main/res/layout/activity_audio_player.xml
+++ b/app/src/main/res/layout/activity_audio_player.xml
@@ -156,8 +156,10 @@
 
     <TextView
         android:id="@+id/textViewRightAlbum"
+        android:maxLines="1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:maxWidth="160dp"
         android:paddingTop ="9dp"
         android:paddingBottom="8dp"
         android:textSize="13sp"
