--- a/app/src/main/res/layout/item_track.xml
+++ b/app/src/main/res/layout/item_track.xml
@@ -49,6 +49,8 @@
             android:id="@+id/artist_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:maxWidth="220dp"
             android:ellipsize="end"
             android:fontFamily="@font/ys_display_regular"
             android:textColor="@color/grey_ic"
