--- a/app/src/main/res/layout/fragment_media_content.xml
+++ b/app/src/main/res/layout/fragment_media_content.xml
@@ -3,6 +3,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </androidx.recyclerview.widget.RecyclerView>
+
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
@@ -11,7 +23,7 @@
         android:layout_marginBottom="46dp"
         android:background="@drawable/rounder_button_search"
         android:fontFamily="@font/ys_display_medium"
-        android:text="Новый плейлист"
+        android:text="@string/new_playlist"
         android:textAllCaps="false"
         android:textColor="@color/text_white_black"
         android:textSize="14sp"
