--- a/app/src/main/res/drawable/custom_palka.xml
+++ b/app/src/main/res/drawable/custom_palka.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="54dp" />
-    <solid android:color="@color/search_ic_and_text" />
+
+    <solid android:color="@color/grey_white"/>
+
+    <corners android:radius="44px"/>
+
 </shape>
