--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,9 @@
     <color name="text_grey">#AEAFB4</color>
     <color name="back_ic_audio_player">#1A1B22</color>
     <color name="ic_clear">#AEAFB4</color>
+    <color name="grey_practicum_static">#AEAFB4</color>
+    <color name="grey_white">#E6E8EB</color>
+    <color name="b_grey_white">#AEAFB4</color>
 
 
 
