--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -101,6 +101,32 @@
         <item name="android:textColor">"@color/blue_practicum"</item>
     </style>
 
+    <!-- Стиль для лейбла -->
+    <style name="TextInputLayoutHintAppearance" parent="TextAppearance.MaterialComponents.Caption">
+        <item name="android:textSize">13sp</item>
+        <item name="fontFamily">@font/ys_display_regular</item>
+    </style>
+
+    <!-- Стиль для поля ввода -->
+    <style name="Widget.MyApp.TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="boxBackgroundColor">@android:color/transparent</item>
+        <item name="boxStrokeColor">#AEAFB4</item>
+        <item name="boxStrokeWidth">1dp</item>
+        <item name="boxCornerRadiusTopStart">3.5dp</item>
+        <item name="boxCornerRadiusTopEnd">3.5dp</item>
+        <item name="boxCornerRadiusBottomStart">3.5dp</item>
+        <item name="boxCornerRadiusBottomEnd">3.5dp</item>
+        <item name="hintTextAppearance">@style/TextInputLayoutHintAppearance</item>
+        <item name="hintTextColor">@color/text_input_hint_color</item>
+        <item name="colorControlActivated">#3772E7</item>
+    </style>
+
+    <style name="Widget.MyApp.TextInputEditText" parent="Widget.MaterialComponents.TextInputEditText.OutlinedBox">
+        <item name="android:textSize">16sp</item>
+
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+    </style>
+
 
 
 </resources>
