--- a/app/src/main/res/layout/fragment_create_play_list.xml
+++ b/app/src/main/res/layout/fragment_create_play_list.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/text_white_black"
     tools:context=".presentation.ui.fragment.CreatePlayListFragment">
 
     <ImageButton
