--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -110,7 +110,7 @@
     <!-- Стиль для поля ввода -->
     <style name="Widget.MyApp.TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="boxBackgroundColor">@android:color/transparent</item>
-        <item name="boxStrokeColor">#AEAFB4</item>
+        <item name="boxStrokeColor">@color/text_input_box_stroke_color</item>
         <item name="boxStrokeWidth">1dp</item>
         <item name="boxCornerRadiusTopStart">3.5dp</item>
         <item name="boxCornerRadiusTopEnd">3.5dp</item>
@@ -123,7 +123,7 @@
 
     <style name="Widget.MyApp.TextInputEditText" parent="Widget.MaterialComponents.TextInputEditText.OutlinedBox">
         <item name="android:textSize">16sp</item>
-
+        <item name="boxStrokeColor">#AEAFB4</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
     </style>
 
