--- a/app/src/main/res/color/text_input_box_stroke_color.xml
+++ b/app/src/main/res/color/text_input_box_stroke_color.xml
@@ -2,5 +2,5 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:color="@color/grey_white" android:state_focused="false" android:state_hovered="false"/>
 
-    <item android:color="@color/grey_white" android:state_focused="true"/>
+    <item android:color="@color/blue_practicum_static" android:state_focused="true"/>
 </selector>
