--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -119,6 +119,7 @@
         <item name="hintTextAppearance">@style/TextInputLayoutHintAppearance</item>
         <item name="hintTextColor">@color/text_input_hint_color</item>
         <item name="colorControlActivated">#3772E7</item>
+        <item name="cursorColor">@color/blue_practicum_static</item>
     </style>
 
     <style name="Widget.MyApp.TextInputEditText" parent="Widget.MaterialComponents.TextInputEditText.OutlinedBox">
@@ -126,7 +127,6 @@
         <item name="boxStrokeColor">#AEAFB4</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
     </style>
-
 
 
 </resources>
