--- a/app/src/main/res/layout/fragment_info_playlist.xml
+++ b/app/src/main/res/layout/fragment_info_playlist.xml
@@ -116,6 +116,9 @@
         app:behavior_peekHeight="300dp"
         app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
+
+
+
         <View
             android:layout_width="50dp"
             android:layout_height="4dp"
@@ -123,6 +126,29 @@
             android:layout_marginTop="10dp"
             android:background="@drawable/custom_palka" />
 
+        <LinearLayout
+            android:id="@+id/placeholder"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center_horizontal"
+            android:layout_marginTop="40dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_nothingfind" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/none_track"
+                android:textSize="18sp"
+                android:textColor="@color/text_black_white"
+                android:fontFamily="@font/ys_display_regular"
+                android:layout_marginTop="8dp" />
+        </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler"
